--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./src/index.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Demo-form</title>
+    <title>Olive Club</title>
   </head>
   <body>
     <div id="root"></div>
