Removed bugs with mobile adaptation, verify page, addded translation

--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="theme-color" content="#000000" />
     <link
       rel="shortcut icon"
-      href="favicon.ico"
+      href="/favicon.png"
       type="image/x-icon"
     >
-    <link rel="stylesheet" href="../src/index.css" />
+    <link rel="stylesheet" href="src/index.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Olive Club</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="../src/main.jsx"></script>
+    <script type="module" src="src/main.jsx"></script>
   </body>
 </html>
 
