Removed bugs with styles, added styles

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+
     <meta charset="UTF-8" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -10,12 +11,16 @@
       href="/favicon.png"
       type="image/x-icon"
     >
-    <link rel="stylesheet" href="src/index.css" />
+    <link rel="stylesheet" href="src/styles.css" />
+
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TN84ZQDV');</script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Olive Club</title>
   </head>
   <body>
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN84ZQDV" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div id="root"></div>
     <script type="module" src="src/main.jsx"></script>
   </body>
