Removed bugs with styles, removed some trash code

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     })(window,document,'script','dataLayer','GTM-TN84ZQDV');</script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Olive Club</title>
+    <title>Family Olive Club</title>
   </head>
   <body>
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN84ZQDV" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
