Updated styles and meta

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Passive income, rooted in the rhythms of nature. Family Olive Club is the choice of those who look beyond the horizon.">
     <link
       rel="shortcut icon"
       href="/favicon.png"
@@ -17,7 +18,7 @@
     })(window,document,'script','dataLayer','GTM-TN84ZQDV');</script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Family Olive Club</title>
+    <title>Family Olive Club – Liquidity beyond time</title>
   </head>
   <body>
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN84ZQDV" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
