--- a/index.html
+++ b/index.html
@@ -1,29 +1,64 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
 
-    <meta charset="UTF-8" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Passive income, rooted in the rhythms of nature. Family Olive Club is the choice of those who look beyond the horizon.">
-    <link
-      rel="shortcut icon"
-      href="/favicon.png"
-      type="image/x-icon"
-    >
-    <link rel="stylesheet" href="src/styles.css" />
+  <meta charset="UTF-8" />
+  <meta
+    name="apple-mobile-web-app-status-bar-style"
+    content="black-translucent"
+  />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+  />
+  <meta
+    name="theme-color"
+    content="#000000"
+  />
+  <meta
+    name="description"
+    content="Passive income, rooted in the rhythms of nature. Family Olive Club is the choice of those who look beyond the horizon."
+  >
+  <link
+    rel="shortcut icon"
+    href="/favicon.png"
+    type="image/x-icon"
+  >
+  <link
+    rel="stylesheet"
+    href="src/styles.css"
+  />
 
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-TN84ZQDV');</script>
+  <script>(function (w, d, s, l, i) {
+    w[l] = w[l] || [];
+    w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
+    var f = d.getElementsByTagName(s)[0], j = d.createElement(s),
+      dl = l != 'dataLayer' ? '&l=' + l : '';
+    j.async = true;
+    j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+    f.parentNode.insertBefore(j, f);
+  })(window, document, 'script', 'dataLayer', 'GTM-TN84ZQDV');</script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Family Olive Club – Liquidity beyond time</title>
-  </head>
-  <body>
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN84ZQDV" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <div id="root"></div>
-    <script type="module" src="src/main.jsx"></script>
-  </body>
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  />
+  <title>Family Olive Club – Liquidity beyond time</title>
+</head>
+<body>
+<noscript>
+  <iframe
+    src="https://www.googletagmanager.com/ns.html?id=GTM-TN84ZQDV"
+    height="0"
+    width="0"
+    style="display:none;visibility:hidden"
+  ></iframe>
+</noscript>
+<div id="root"></div>
+<script
+  type="module"
+  src="src/main.jsx"
+></script>
+</body>
 </html>
 
