Added countries to phone, added police link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   />
   <meta
     name="description"
-    content="Passive income, rooted in the rhythms of nature. Family Olive Club is the choice of those who look beyond the horizon."
+    content="Passive income, rooted in the rhythms of nature. Family Olive Club is
+     the choice of those who look beyond the horizon."
   >
   <link
     rel="shortcut icon"
